# cv_statistics_assessment

./: CMakeLists.txt
lib/include/: generator.h  methods.h
lib/src/: generator.cpp  methods.cpp
src/: assess.cpp  evaluate.cpp  generate.cpp  main.cpp
src/config/: config.json
src/gt/: d0_snr0dB.json  d0_snr10dB.json  d0_snr15dB.json  d0_snr20dB.json  d0_snr25dB.json  d0_snr30dB.json  d0_snr35dB.json  d0_snr40dB.json  d0_snr45dB.json  d0_snr50dB.json  d0_snr5dB.json  d1_snr0dB.json  d1_snr10dB.json  d1_snr15dB.json  d1_snr20dB.json  d1_snr25dB.json  d1_snr30dB.json  d1_snr35dB.json  d1_snr40dB.json  d1_snr45dB.json  d1_snr50dB.json  d1_snr5dB.json  d2_snr0dB.json  d2_snr10dB.json  d2_snr15dB.json  d2_snr20dB.json  d2_snr25dB.json  d2_snr30dB.json  d2_snr35dB.json  d2_snr40dB.json  d2_snr45dB.json  d2_snr50dB.json  d2_snr5dB.json
